--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
     "cropperjs": "^1.5.13",
-    "ngx-image-cropper": "^3.2.1",
+    "ngx-image-cropper": "^4.0.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "~1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
