--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.0",
     "cropperjs": "^1.5.13",
     "ngx-image-cropper": "^4.0.1",
+    "qrcode": "^1.5.1",
     "rxjs": "~6.5.4",
     "tslib": "~1.13.0",
     "zone.js": "~0.10.2"
@@ -35,6 +36,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/qrcode": "^1.5.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
